# ikoma-ai

./: .allow_domains.txt  .coverage  .deny_domains.txt  .env  .env.example  .gitignore  .pip-audit-ignore  .yamllint  CHROMA_MEMORY_SETUP.md  ISSUE_EXAMPLES.md  ISSUE_GUIDELINES.md  LABEL_EXPORT_GUIDE.md  LABEL_STRATEGY_SUMMARY.md  PHASE_1B_SUMMARY.md  PHASE_2_SUMMARY.md  QUICK_SETUP.md  README.md  TODO.md  analyze_labels.py  check_labels.py  config.env.template  coverage.xml  demo_search.py  desktop.ini  export_labels.sh  label_checklist.md  label_comparison.py  mypy.ini  pyproject.toml  reflect.py  repo_structure.jsonl  requirements.txt  run_agent.py  run_dashboard_tests.py  setup.sh  setup_issues.md  test_agent_citations.py  test_agent_modern.py  test_agent_phase1b.py  test_citation_performance.py  (+17 more)
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_request.md  platform_issue.md
.github/workflows/: benchmark.yml  ci.yml
agent/: __init__.py  agent.py  checkpointer.py  constants.py  instrumentation.py  memory_manager.py  ui.py
agent/cli/: __init__.py  checkpoint_cli.py
agent/heuristics/: __init__.py  base.py  checkpoint.py  goal.py  iteration.py  time.py
agent/ikoma_sandbox/: demo_output.txt  hello.txt  who_are_you.txt
agent/memory/: chroma.sqlite3  conversations.sqlite
agent/metrics/: __init__.py  analyzer.py  collector.py  models.py  reporter.py
agent/ui/: components.py  dashboard_sender.py  layouts.py  (+3 more)
benchmarks/: README.md  __init__.py  baselines.json  bench.py  metrics.py  scenarios.py
cursor/: ikoma.cursor.yaml
dashboard/: __init__.py  app.py  dependencies.py  error_recovery.py  models.py  progress_predictor.py  server.py  sse_manager.py  state_manager.py  unified_state.py
demos/: README.md  demo_continuous.py  demo_offline.py  demo_online.py  demo_script.py  demo_search.py
docs/: CI_IMPROVEMENTS.md  DASHBOARD_MVP_SUMMARY.md  INSTRUMENTATION_SUMMARY.md  LABEL_MANAGEMENT.md  SANDBOX_ARCHITECTURE.md  TEST_CLEANUP_ANALYSIS.md  checkpointer.md  continuous_mode.md  planning.md
ikoma/: __init__.py
ikoma.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
planning/: __init__.py  reflection.py
scripts/: README.md  bulk_create_phase2.py  create_github_issues.py  establish_baseline.sh  update_repo_structure.py
tests/: README.md  __init__.py  conftest.py  test_agent_citations.py  test_agent_phase1b.py  test_benchmarks.py  test_checkpointer.py  test_checkpointer_crud.py  test_checkpointer_toggle.py  test_ci_cleanup.py  test_citation_state_persistence.py  test_citation_superscripts.py  test_citation_vector_store.py  test_citations.py  test_cleanup_analysis.py  test_cli_checkpointer.py  test_cli_continuous.py  test_dashboard.py  test_dashboard_caching.py  test_dashboard_demo_integration.py  test_dashboard_mvp.py  test_domain_filter.py  test_domain_filter_simple.py  test_goal_criterion.py  test_goal_satisfaction_integration.py  test_http_client.py  test_human_checkpoint.py  test_instrumentation.py  test_iteration_limit.py  test_memory_manager_integration.py  test_metrics.py  test_metrics_dashboard.py  test_persistence_vector_store.py  test_plan_reflection.py  test_plan_schema.py  test_reflect_termination.py  test_sandbox_tools.py  test_simple_web_extraction.py  test_time_limit_criterion.py  test_tui_basic.py  (+3 more)
tools/: __init__.py  citation_manager.py  content_extractor.py  domain_filter.py  fs_tools.py  http_client.py  http_tools.py  internet_tools.py  mcp_schema.json  security.py  tool_fallback.py  tool_loader.py  vector_store.py  web_extraction.py  web_security.py  web_tools.py
(+29 files in other folders)
