[project]
name = "ikoma"
version = "0.2.0"
description = "iKOMA AI Agent - Plan-Execute-Reflect Architecture"
dependencies = [
    "langchain-openai",
    "langgraph",
    "chromadb",
    "python-dotenv",
    "openai",
    "pathlib",
    "uuid",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "tools*"] 