[project]
name = "ikoma"
version = "0.2.0"
description = "iKOMA AI Agent - Plan-Execute-Reflect Architecture"
dependencies = [
    "langchain-openai",
    "langgraph",
    "chromadb",
    "python-dotenv",
    "openai",
    "pathlib",
    "uuid",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "tools*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "langchain.*"
ignore_missing_imports = true 